export const snapshot = {};

snapshot[`Snapshot Test 1`] = `
{
  a: 1,
  b: 2,
}
`;

snapshot[`Snapshot Test 2`] = `
TestClass {
  a: 1,
  b: 2,
}
`;

snapshot[`Snapshot Test 3`] = `
Map {
  ,
}
`;

snapshot[`Snapshot Test 4`] = `
Set {
  1,
  2,
  3,
}
`;

snapshot[`Snapshot Test 5`] = `
{
  fn: [Function: fn],
}
`;

snapshot[`Snapshot Test 6`] = `[Function: fn]`;

snapshot[`Snapshot Test 7`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`Snapshot Test 8`] = `"hello world"`;

snapshot[`Snapshot Test - step 1`] = `
{
  a: 1,
  b: 2,
}
`;

snapshot[`Snapshot Test - step > Nested 1`] = `
TestClass {
  a: 1,
  b: 2,
}
`;

snapshot[`Snapshot Test - step > Nested 2`] = `
Map {
  ,
}
`;

snapshot[`Snapshot Test - step > Nested > Nested Nested 1`] = `
Set {
  1,
  2,
  3,
}
`;

snapshot[`Snapshot Test - step > Nested > Nested Nested 2`] = `
{
  fn: [Function: fn],
}
`;

snapshot[`Snapshot Test - step > Nested > Nested Nested 3`] = `[Function: fn]`;

snapshot[`Snapshot Test - step > Nested 3`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`Snapshot Test - step 2`] = `"hello world"`;

snapshot[`Snapshot Test - Adverse String \\ \` \${} 1`] = `"\\\\ \` \${}"`;

snapshot[`Snapshot Test - Failed Assertion > Object 1`] = `
[
  1,
  2,
  3,
]
`;

snapshot[`Snapshot Test - Failed Assertion > Object 2`] = `
[
  "Snapshot does not match:",
  "",
  "",
  "    \\x1b[90m\\x1b[1m[Diff]\\x1b[22m\\x1b[39m \\x1b[31m\\x1b[1mActual\\x1b[22m\\x1b[39m / \\x1b[32m\\x1b[1mExpected\\x1b[22m\\x1b[39m",
  "",
  "",
  "\\x1b[37m    [\\x1b[39m",
  "\\x1b[37m      1,\\x1b[39m",
  "\\x1b[37m      2,\\x1b[39m",
  "\\x1b[32m\\x1b[1m+     3,\\x1b[22m\\x1b[39m",
  "\\x1b[37m    ]\\x1b[39m",
  "",
]
`;

snapshot[`Snapshot Test - Failed Assertion > String 1`] = `"Hello World!"`;

snapshot[`Snapshot Test - Failed Assertion > String 2`] = `
[
  "Snapshot does not match:",
  "",
  "",
  "    \\x1b[90m\\x1b[1m[Diff]\\x1b[22m\\x1b[39m \\x1b[31m\\x1b[1mActual\\x1b[22m\\x1b[39m / \\x1b[32m\\x1b[1mExpected\\x1b[22m\\x1b[39m",
  "",
  "",
  '\\x1b[31m\\x1b[1m-   "Hello!"',
  '\\x1b[22m\\x1b[39m\\x1b[32m\\x1b[1m+   "Hello\\x1b[42m\\x1b[37m \\x1b[32m\\x1b[49m\\x1b[42m\\x1b[37mWorld\\x1b[32m\\x1b[49m!"',
  "\\x1b[22m\\x1b[39m",
  "",
]
`;